# clip_bridge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  build.rs  package-lock.json  package.json  playwright.config.ts
assets/: app.html  index.html
src/: cli.rs  html.rs  ice.rs  main.rs  models.rs  routes.rs  state.rs  turn_relay.rs
tests/e2e/: clipboard-sync.spec.ts
