[package]
name = "p2p_clip_bridge_server"
version = "0.2.0"
edition = "2021"
description = "A small P2P WebRTC clipboard and file bridge server for password-in-URL rooms"
license = "MIT OR Apache-2.0"
repository = "https://github.com/phpgoc/p2p_clip_bridge_server"
readme = "README.md"
keywords = ["clipboard", "webrtc", "p2p", "file-transfer"]
categories = ["command-line-utilities", "web-programming::http-server"]
include = [
    "/build.rs",
    "/Cargo.toml",
    "/Cargo.lock",
    "/README.md",
    "/README.zh-CN.md",
    "/assets/**",
    "/src/**",
]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4.5", features = ["derive"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
turn = "0.17.1"
util = { package = "webrtc-util", version = "0.17.1", default-features = false, features = ["conn", "vnet"] }
